--- a/locale/en_US/emails.po
+++ b/locale/en_US/emails.po
@@ -334,6 +334,118 @@ msgstr ""
 "<p>Kind regards,</p>\n"
 "<p>{$signature}</p>\n"
 
+msgid "emails.editorDecisionBackToSubmissionNotifyReviewer.subject"
+msgstr "Your review requested associated submission has been sent back for editorial review"
+
+msgid "emails.editorDecisionBackToSubmissionNotifyReviewer.body"
+msgstr ""
+"<p>Dear {$recipientName},</p>\n"
+"<p>The submission, {$submissionTitle}, for which you have been request to do review, has been sent back to the submission stage. \n"
+"An editor will look it over before it is sent for peer review.</p>\n"
+"<p>Occasionally, a decision to send a submission for peer review will be recorded accidentally \n"
+"in our system and we must send it back to the submission stage. I apologize for any confusion \n"
+"this may have caused.</p>"
+"<p>We will contact you if we need any further assistance.</p>\n"
+"<p>If you have any questions, please contact me from your <a href=\"{$authorSubmissionUrl}\">submission dashboard</a>.</p>\n"
+"<p>Kind regards,</p>\n"
+"<p>{$signature}</p>\n"
+
+msgid "emails.editorDecisionBackToPreviousExternalReviewRoundNotifyReviewer.subject"
+msgstr "Your review requested associated submission has been sent back previous round for editorial review"
+
+msgid "emails.editorDecisionBackToPreviousExternalReviewRoundNotifyReviewer.body"
+msgstr ""
+"<p>Dear {$recipientName},</p>\n"
+"<p>The submission, {$submissionTitle}, for which you have been request to do review, has been sent back to previous review round. \n"
+"An editor will look it over before it is sent for next round of peer review.</p>\n"
+"<p>Occasionally, a decision to send a submission for another round of peer review will be recorded accidentally \n"
+"in our system and we must send it back to the previous round. I apologize for any confusion \n"
+"this may have caused.</p>"
+"<p>We will contact you if we need any further assistance.</p>\n"
+"<p>If you have any questions, please contact me from your <a href=\"{$authorSubmissionUrl}\">submission dashboard</a>.</p>\n"
+"<p>Kind regards,</p>\n"
+"<p>{$signature}</p>\n"
+
+msgid "emails.editorDecisionBackToPreviousInternalReviewRoundNotifyReviewer.subject"
+msgstr "Your review requested associated submission has been sent back previous round for editorial review"
+
+msgid "emails.editorDecisionBackToPreviousInternalReviewRoundNotifyReviewer.body"
+msgstr ""
+"<p>Dear {$recipientName},</p>\n"
+"<p>The submission, {$submissionTitle}, for which you have been request to do review, has been sent back to previous review round. \n"
+"An editor will look it over before it is sent for next round of peer review.</p>\n"
+"<p>Occasionally, a decision to send a submission for another round of peer review will be recorded accidentally \n"
+"in our system and we must send it back to the previous round. I apologize for any confusion \n"
+"this may have caused.</p>"
+"<p>We will contact you if we need any further assistance.</p>\n"
+"<p>If you have any questions, please contact me from your <a href=\"{$authorSubmissionUrl}\">submission dashboard</a>.</p>\n"
+"<p>Kind regards,</p>\n"
+"<p>{$signature}</p>\n"
+
+msgid "emails.editorDecisionBackToPreviousExternalReviewRoundNotifyAuthor.subject"
+msgstr "Submission sent back to previour external review round"
+
+msgid "emails.editorDecisionBackToPreviousExternalReviewRoundNotifyAuthor.body"
+msgstr ""
+"<p>Dear {$recipientName},</p>\n"
+"<p>Your submission, {$submissionTitle}, has been sent back to previous external review round. \n"
+"An editor will look it over before it is sent for next round of peer review.</p>\n"
+"<p>Occasionally, a decision to send a submission for another round of peer review will be recorded accidentally \n"
+"in our system and we must send it back to the previous round. I apologize for any confusion \n"
+"this may have caused.</p>"
+"<p>We will contact you if we need any further assistance.</p>\n"
+"<p>If you have any questions, please contact me from your <a href=\"{$authorSubmissionUrl}\">submission dashboard</a>.</p>\n"
+"<p>Kind regards,</p>\n"
+"<p>{$signature}</p>\n"
+
+msgid "emails.editorDecisionBackToPreviousInternalReviewRoundNotifyAuthor.subject"
+msgstr "Submission sent back to previour internal review round"
+
+msgid "emails.editorDecisionBackToPreviousInternalReviewRoundNotifyAuthor.body"
+msgstr ""
+"<p>Dear {$recipientName},</p>\n"
+"<p>Your submission, {$submissionTitle}, has been sent back to previous internal review round. \n"
+"An editor will look it over before it is sent for next round of peer review.</p>\n"
+"<p>Occasionally, a decision to send a submission for another round of peer review will be recorded accidentally \n"
+"in our system and we must send it back to the previous round. I apologize for any confusion \n"
+"this may have caused.</p>"
+"<p>We will contact you if we need any further assistance.</p>\n"
+"<p>If you have any questions, please contact me from your <a href=\"{$authorSubmissionUrl}\">submission dashboard</a>.</p>\n"
+"<p>Kind regards,</p>\n"
+"<p>{$signature}</p>\n"
+
+msgid "emails.editorDecisionBackToInternalReviewNotifyAuthor.subject"
+msgstr "Your submission has been sent back to internal review stage for editorial review"
+
+msgid "emails.editorDecisionBackToInternalReviewNotifyAuthor.body"
+msgstr ""
+"<p>Dear {$recipientName},</p>\n"
+"<p>The submission, {$submissionTitle}, has been sent back to internal review stage. \n"
+"An editor will look it over before it is sent for next round of peer review.</p>\n"
+"<p>Occasionally, a decision to send a submission for another round of peer review will be recorded accidentally \n"
+"in our system and we must send it back to the previous round. I apologize for any confusion \n"
+"this may have caused.</p>"
+"<p>We will contact you if we need any further assistance.</p>\n"
+"<p>If you have any questions, please contact me from your <a href=\"{$authorSubmissionUrl}\">submission dashboard</a>.</p>\n"
+"<p>Kind regards,</p>\n"
+"<p>{$signature}</p>\n"
+
+msgid "emails.editorDecisionBackToInternalReviewNotifyReviewer.subject"
+msgstr "Your review requested submission has been sent back to internal review stage for editorial review"
+
+msgid "emails.editorDecisionBackToInternalReviewNotifyReviewer.body"
+msgstr ""
+"<p>Dear {$recipientName},</p>\n"
+"<p>The submission, {$submissionTitle}, for which you have been request to do review, {$submissionTitle}, has been sent back to internal review stage. \n"
+"An editor will look it over before it is sent for next round of peer review.</p>\n"
+"<p>Occasionally, a decision to send a submission for another round of peer review will be recorded accidentally \n"
+"in our system and we must send it back to the previous round. I apologize for any confusion \n"
+"this may have caused.</p>"
+"<p>We will contact you if we need any further assistance.</p>\n"
+"<p>If you have any questions, please contact me from your <a href=\"{$authorSubmissionUrl}\">submission dashboard</a>.</p>\n"
+"<p>Kind regards,</p>\n"
+"<p>{$signature}</p>\n"
+
 msgid "emails.layoutRequest.subject"
 msgstr "Submission {$submissionId} is ready for production at {$contextAcronym}"
 
