--- a/locale/en_US/submission.po
+++ b/locale/en_US/submission.po
@@ -550,3 +550,6 @@ msgstr "Recommend that this submission be sent to the external review stage."
 
 msgid "editor.submission.recommend.sendExternalReview.log"
 msgstr "{$editorName} recommended that this submission be sent to the external review stage."
+
+msgid "doi.submission.incorrectContext"
+msgstr "Could not create a DOI for the following submission: {$pubObjectTitle}. It does not exist in the current press context."
