--- a/locale/en_US/manager.po
+++ b/locale/en_US/manager.po
@@ -1356,6 +1356,12 @@ msgstr "Item"
 msgid "doi.manager.submissionDois"
 msgstr "Monograph DOIs"
 
+msgid "mailable.decision.backToInternalReview.notifyAuthor.name"
+msgstr "Submission Sent Back to Internal Review"
+
+msgid "mailable.decision.backToInternalReview.notifyAuthor.description"
+msgstr "This email notifies the author that their submission has been sent back to the internal review stage."
+
 msgid "mailable.decision.sendInternalReview.notifyAuthor.name"
 msgstr "Sent to Internal Review"
 
