--- a/locale/en_US/emails.po
+++ b/locale/en_US/emails.po
@@ -335,20 +335,19 @@ msgstr ""
 "<p>{$signature}</p>\n"
 
 msgid "emails.editorDecisionBackToInternalReviewNotifyAuthor.subject"
-msgstr "Your submission has been sent back to internal review stage for editorial review"
+msgstr "Your submission has been sent back to the internal review stage"
 
 msgid "emails.editorDecisionBackToInternalReviewNotifyAuthor.body"
 msgstr ""
-"<p>Dear {$recipientName},</p>\n"
-"<p>The submission, {$submissionTitle}, has been sent back to internal review stage. \n"
-"An editor will look it over before it is sent for next round of peer review.</p>\n"
-"<p>Occasionally, a decision to send a submission for another round of peer review will be recorded accidentally \n"
-"in our system and we must send it back to the previous round. I apologize for any confusion \n"
+"<p>Dear {$recipientName},</p>"
+"<p>The submission, {$submissionTitle}, has been sent back to the internal review stage.</p>"
+"<p>Occasionally, a decision will be recorded accidentally "
+"in our system and we must cancel that decision. I apologize for any confusion "
 "this may have caused.</p>"
-"<p>We will contact you if we need any further assistance.</p>\n"
-"<p>If you have any questions, please contact me from your <a href=\"{$authorSubmissionUrl}\">submission dashboard</a>.</p>\n"
-"<p>Kind regards,</p>\n"
-"<p>{$signature}</p>\n"
+"<p>We will contact you if we need any further assistance.</p>"
+"<p>If you have any questions, please contact me from your <a href=\"{$authorSubmissionUrl}\">submission dashboard</a>.</p>"
+"<p>Kind regards,</p>"
+"<p>{$signature}</p>"
 
 msgid "emails.layoutRequest.subject"
 msgstr "Submission {$submissionId} is ready for production at {$contextAcronym}"
