--- a/locale/en_US/manager.po
+++ b/locale/en_US/manager.po
@@ -1356,6 +1356,12 @@ msgstr "Item"
 msgid "doi.manager.submissionDois"
 msgstr "Monograph DOIs"
 
+msgid "mailable.decision.backFromInternalReview.notifyAuthor.name"
+msgstr "Submission Sent Back from Internal Review"
+
+msgid "mailable.decision.backFromInternalReview.notifyAuthor.description"
+msgstr "This email notifies the author that their submission has been sent back from current internal review round or stage."
+
 msgid "mailable.decision.backToInternalReview.notifyAuthor.name"
 msgstr "Submission Sent Back to Internal Review"
 
